pattern fix on mobile

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -45,7 +45,7 @@ footer{
         }
     }
     &__logo{
- z-index: 99;
+ z-index: 33;
         height: 124px;
         width: 124px;
         position: absolute;
