--- a/src/scss/_hero-lg.scss
+++ b/src/scss/_hero-lg.scss
@@ -15,6 +15,9 @@
     position: relative;
     padding-top: 2rem;
     padding-bottom: 5rem;
+    @media (max-width : 768px) {
+    padding-bottom: 58px;    
+    }
     overflow: hidden;
     .patt{
         position: absolute;
@@ -200,12 +203,16 @@
             
         }
             .caption{
-                display: none;   
+                // display: none;   
+                display: flex;
                 @media ( min-width : 1200px ) {
-                    display: flex;
+                }
+                @media (max-width : 752px ){
+                    flex-direction: column;
+                    padding-bottom: 1rem!important;
                 }
                 width: 100%;
-                height: 50px;
+                // height: 50px;
                 position: absolute;
                 bottom: 0px;
                 left: 0px;
