--- a/src/scss/_mobilenav.scss
+++ b/src/scss/_mobilenav.scss
@@ -25,7 +25,7 @@ body{
     width: 100vw;
     min-height: 100vh;
     transform: translateX(-100vw);
-    transition: transform ease-in-out 1.3s;
+    transition: transform ease-in-out 0.3s;
     display: flex;
     flex-direction: column;
     
@@ -44,9 +44,10 @@ body{
     display: flex;
     padding: 1rem 2rem;
     .left{
+        text-align: left;
         width: 50%;
         display: flex;
-        align-items: center;
+        align-items: flex-start;
         justify-content: center;
         flex-direction: column;
         h5{
