--- a/src/scss/_privacy.scss
+++ b/src/scss/_privacy.scss
@@ -1,4 +1,5 @@
 .privacy{
+    z-index: 40;
     transform: translateX(calc(-100% - 160px));
     transition: all ease-in-out .3s;
     opacity: 0;
